# ProjectDMegAryan

./: .gitignore  .rest
AwesomeProject/: App.tsx  Auth.tsx  GlobalStyles.tsx  Metrics.js  package-lock.json  package.json
AwesomeProject/components/: AddUserPopUp.tsx  Afbeelding.tsx  Close1.tsx  RequestPopUp.js  StopPopUp.js  StopPopUp.tsx
AwesomeProject/ios/: Podfile
AwesomeProject/screens/: Admin.js  Admin.tsx  ChargerOverview.tsx  Chargers.js  Graphs.js  Home.js  Home.tsx  Homepage.js  IPAddress.js  IPhone1415ProMax.js  IPhone1415ProMax1.js  IPhone1415ProMax2.js  Login.js  Login.tsx  RequestPopUp.js  Signup.js  Signup.tsx  UserGraph.js  Users.js  UsersOverview.tsx
ProjectD/: App.tsx  app.json  package.json
ProjectD/screens/: Admin.tsx  (+5 more)
ProjectDCLI/: App.tsx  GlobalStyles.ts  app.json  package-lock.json  package.json
backend/: .env  Cargo.toml
backend/db/: database.db  schema.dot  sqlite-schema-diagram.sql
backend/migrations/2024-04-29-184623_init_api/: down.sql  up.sql
backend/migrations/2024-05-20-141630_add_charging_stations/: down.sql  up.sql
backend/migrations/2024-06-07-182838_alter_user_table/: down.sql  up.sql
backend/src/: db.rs  main.rs  models.rs  schema.rs
backend/src/handlers/: car_handler.rs  charger_handler.rs  mod.rs  routing_handler.rs  slack_handler.rs  user_handler.rs
backend/src/routes/: car_routes.rs  charger_routes.rs  mod.rs  request_routes.rs  slack_routes.rs  user_routes.rs
backend/src/tests/: car_handler_tests.rs  charger_handler_tests.rs  routing_handler_tests.rs  user_handler_tests.rs
scripts/: normalize_api.py
(+59 files in other folders)
