[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "1.4"
dotenvy = "0.15"
rocket = { version = "0.5.0", features = ["json"] }
serde = "=1.0.197"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
rocket_cors = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
sha256 = "1.5.0"

# [dev-dependencies]
# we kunnen ook eventueel integration tests doen
# rocket = { version = "0.5.0-rc.2", features = ["async-test"] }

[[bin]]
name = "api"
path = "src/main.rs"
